Update project from net 6.0 to 8.0

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,9 +1,7 @@
-﻿@using Humanizer
-
+﻿
 @{
     ViewData["Title"] = "Home";
 }
 
-<div class="d-flex justify-content-between nav-header">
-    <h1 class="display-6">Home</h1>
-</div>
+<h1>Index</h1>
+
