--- a/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/Views/Account/Login.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="mb-4">
                 <label class="block font-normal mb-1" for="emailInput">Email Address <span class="text-red-500">*</span></label>
-                <input type="email" asp-for="Email" id="emailInput" placeholder="juandelacruz@gradsync.com" required
+                <input type="email" asp-for="Email" id="emailInput" required
                        class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent hover:border-[#991b1b]" />
                 @if (ViewData.ModelState["Email"] != null)
                 {
@@ -29,7 +29,7 @@
             <div class="mb-4">
                 <label class="block font-normal mb-1" for="passwordInput">Password <span class="text-red-500">*</span></label>
                 <div class="relative">
-                    <input type="password" asp-for="Password" id="passwordInput" placeholder="******" required
+                    <input type="password" asp-for="Password" id="passwordInput" required
                            class="w-full border border-gray-300 rounded-md p-2 pr-10 focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent hover:border-[#991b1b]" />
                     <button type="button" onclick="togglePasswordVisibility()" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-500">
                         <!-- Eye Open Icon -->
