--- a/WebApp/Views/Account/_RegisterModal.cshtml
+++ b/WebApp/Views/Account/_RegisterModal.cshtml
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <!-- Modal Header -->
             <div class="modal-header">
-                <h5 class="modal-title font-bold text-2xl text-[#7A1515]" id="registerUserModalLabel">Register User</h5>
+                <h5 class="modal-title font-bold text-2xl text-[#7A1515]" id="registerUserModalLabel">Sign Up</h5>
                 <button type="button" class="close text-gray-500 hover:text-gray-700" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -21,7 +21,7 @@
                         <span asp-validation-for="Email" class="text-red-500 text-sm mt-1 block"></span>
                     </div>
                     <div class="mb-4">
-                        <label class="block font-normal mb-1" for="name">Name <span class="text-red-500">*</span></label>
+                        <label class="block font-normal mb-1" for="name">Full Name <span class="text-red-500">*</span></label>
                         <input type="text" id="name" asp-for="Name" placeholder="Juan Dela Cruz"
                                class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] hover:border-[#991b1b]" />
                         <span asp-validation-for="Name" class="text-red-500 text-sm mt-1 block"></span>
@@ -38,12 +38,16 @@
                                class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] hover:border-[#991b1b]" />
                         <span asp-validation-for="ConfirmPassword" class="text-red-500 text-sm mt-1 block"></span>
                     </div>
+                    <div class="mb-4 flex items-center">
+                        <input type="checkbox" id="roleCheckbox" asp-for="AsRecruiter" value="true" class="h-4 w-4 text-[#991b1b] focus:ring-2 focus:ring-[#991b1b]" />
+                        <label for="roleCheckbox" class="ml-2 block font-normal">Apply as recruiter</label>
+                    </div>
                 </div>
                 <!-- Modal Footer -->
                 <div class="modal-footer flex justify-between items-center">
                     <button type="submit" id="registerButton" disabled
                             class="bg-[#7A1515] hover:bg-[#A53D3D] text-white font-semibold py-2 px-4 rounded flex items-center disabled:bg-gray-400 disabled:cursor-not-allowed">
-                        Create
+                        Sign Up
                     </button>
                 </div>
             </form>
