--- a/WebApp/Views/Account/_RegisterModal.cshtml
+++ b/WebApp/Views/Account/_RegisterModal.cshtml
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <!-- Modal Header -->
             <div class="modal-header">
-                <h5 class="modal-title font-bold text-2xl text-[#7A1515]" id="registerUserModalLabel">Sign Up</h5>
+                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="registerUserModalLabel">Sign Up</h5>
                 <button type="button" class="close text-gray-500 hover:text-gray-700" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -15,28 +15,29 @@
                 <div class="modal-body">
                     @Html.AntiForgeryToken()
                     <div class="mb-4">
-                        <label class="block font-normal mb-1" for="email">Email <span class="text-red-500">*</span></label>
+                        <label class="mb-1 block font-normal" for="email">Email Address <span class="text-red-500">*</span></label>
                         <input type="text" id="email" asp-for="Email" placeholder="juandelacruz@gradsync.com"
-                               class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] hover:border-[#991b1b]" />
-                        <span asp-validation-for="Email" class="text-red-500 text-sm mt-1 block"></span>
+                               class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
+                        <small>Please use your institution/company email address.</small>
+                        <span asp-validation-for="Email" class="mt-1 block text-sm text-red-500"></span>
                     </div>
                     <div class="mb-4">
-                        <label class="block font-normal mb-1" for="name">Full Name <span class="text-red-500">*</span></label>
+                        <label class="mb-1 block font-normal" for="name">Full Name <span class="text-red-500">*</span></label>
                         <input type="text" id="name" asp-for="Name" placeholder="Juan Dela Cruz"
-                               class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] hover:border-[#991b1b]" />
-                        <span asp-validation-for="Name" class="text-red-500 text-sm mt-1 block"></span>
+                               class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
+                        <span asp-validation-for="Name" class="mt-1 block text-sm text-red-500"></span>
                     </div>
                     <div class="mb-4">
-                        <label class="block font-normal mb-1" for="password">Password <span class="text-red-500">*</span></label>
+                        <label class="mb-1 block font-normal" for="password">Password <span class="text-red-500">*</span></label>
                         <input type="password" id="password" asp-for="Password" placeholder="******"
-                               class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] hover:border-[#991b1b]" />
-                        <span asp-validation-for="Password" class="text-red-500 text-sm mt-1 block"></span>
+                               class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
+                        <span asp-validation-for="Password" class="mt-1 block text-sm text-red-500"></span>
                     </div>
                     <div class="mb-4">
-                        <label class="block font-normal mb-1" for="confirmpassword">Confirm Password <span class="text-red-500">*</span></label>
+                        <label class="mb-1 block font-normal" for="confirmpassword">Confirm Password <span class="text-red-500">*</span></label>
                         <input type="password" id="confirmpassword" asp-for="ConfirmPassword" placeholder="******"
-                               class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] hover:border-[#991b1b]" />
-                        <span asp-validation-for="ConfirmPassword" class="text-red-500 text-sm mt-1 block"></span>
+                               class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
+                        <span asp-validation-for="ConfirmPassword" class="mt-1 block text-sm text-red-500"></span>
                     </div>
                     <div class="mb-4 flex items-center">
                         <input type="checkbox" id="roleCheckbox" asp-for="AsRecruiter" value="true" class="h-4 w-4 text-[#991b1b] focus:ring-2 focus:ring-[#991b1b]" />
@@ -44,9 +45,9 @@
                     </div>
                 </div>
                 <!-- Modal Footer -->
-                <div class="modal-footer flex justify-between items-center">
+                <div class="modal-footer flex items-center justify-between">
                     <button type="submit" id="registerButton" disabled
-                            class="bg-[#7A1515] hover:bg-[#A53D3D] text-white font-semibold py-2 px-4 rounded flex items-center disabled:bg-gray-400 disabled:cursor-not-allowed">
+                            class="flex items-center rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D] disabled:bg-gray-400 disabled:cursor-not-allowed">
                         Sign Up
                     </button>
                 </div>
