--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -2,13 +2,13 @@
 @inject IHttpContextAccessor HttpContextAccessor
 
 @{
-    bool isAdmin = HttpContextAccessor.HttpContext.User.IsInRole("Admin");
+    bool isAdmin = User.IsInRole("Admin");
+    bool isSuper = User.HasClaim("IsSuperAdmin", "true");
+    bool isRecruiter = User.IsInRole("Recruiter");
     var userId = HttpContextAccessor.HttpContext.User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
     bool hasUnreadNotifications = false;
     int notificationCount = 0;
     var role = HttpContextAccessor.HttpContext.User.FindFirst(System.Security.Claims.ClaimTypes.Role)?.Value;
-
-    bool isSuper = User.HasClaim("IsSuperAdmin", "true");
 }
 
 <div class="@((ViewBag.LoginView == true || ViewBag.create == true) ? "hide-navbar" : "sidebar")">
@@ -38,15 +38,15 @@
         @if (isAdmin && !isSuper)
         {
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
-                    <i class="fa fa-suitcase mr-2"></i>
-                    Jobs
-                </a>
-            </li>
-            <li class="py-2">
                 <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
                     <i class="fa fa-building mr-2"></i>
                     Companies
+                </a>
+            </li>
+            <li class="py-2">
+                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
+                    <i class="fa fa-suitcase mr-2"></i>
+                    Jobs
                 </a>
             </li>
             <li class="py-2">
@@ -68,9 +68,38 @@
                 </a>
             </li>
         }
+        @if (isRecruiter)
+        {
+            <li class="py-2">
+                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
+                    <i class="fa fa-building mr-2"></i>
+                    Company
+                </a>
+            </li>
+            <li class="py-2">
+                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
+                    <i class="fa fa-suitcase mr-2"></i>
+                    Jobs
+                </a>
+            </li>
+            <li class="py-2">
+                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Application" ? "bg-gray-200" : "")">
+                    <i class="fa fa-check-circle-o mr-2"></i>
+                    Applications
+                </a>
+            </li>
+        }
         <li>
             <hr class="my-2 border-gray-300" />
         </li>
+        @if (isRecruiter)
+        {
+            <li class="py-2">
+                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200">
+                    <i class="fa fa-cog mr-2"></i> Settings
+                </a>
+            </li>
+        }
         <li class="py-2">
             <a href="#" data-toggle="modal" data-target="#logoutModal" class="flex items-center px-2 py-1 rounded hover:bg-gray-200">
                 <i class="fa fa-sign-out mr-2"></i>
