--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -18,18 +18,18 @@
              alt="logo"
              onclick="window.location.href = '@(User.IsInRole("Employee") ? Url.Action("GetAll", "Ticket") : Url.Action("Index", "Home"))';">
     </div>
-    <div class="mt-5 mb-2 text-gray-700 font-semibold">Navigation</div>
-    <ul class="list-none flex-grow">
+    <div class="mb-2 mt-5 font-semibold text-gray-700">Navigation</div>
+    <ul class="flex-grow list-none">
         @if (isSuper || isAdmin)
         {
             <li class="py-2">
-                <a asp-action="Index" asp-controller="Home" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Home" ? "bg-gray-200" : "")">
+                <a asp-action="Index" asp-controller="Home" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Home" ? "bg-gray-200" : "")">
                     <i class="fa fa-area-chart mr-2"></i>
                     Dashboard
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="Index" asp-controller="User" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "User" ? "bg-gray-200" : "")">
+                <a asp-action="Index" asp-controller="User" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "User" ? "bg-gray-200" : "")">
                     <i class="fa fa-users mr-2"></i>
                     Users
                 </a>
@@ -38,31 +38,25 @@
         @if (isAdmin && !isSuper)
         {
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
                     <i class="fa fa-building mr-2"></i>
                     Companies
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
                     <i class="fa fa-suitcase mr-2"></i>
                     Jobs
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Application" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Application" ? "bg-gray-200" : "")">
                     <i class="fa fa-check-circle-o mr-2"></i>
                     Applications
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="GetAll" asp-controller="Education" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Education" ? "bg-gray-200" : "")">
-                    <i class="fa fa-university mr-2"></i>
-                    Education
-                </a>
-            </li>
-            <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "SnIManagement" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "SnIManagement" ? "bg-gray-200" : "")">
                     <i class="fa fa-industry mr-2"></i>
                     Skills & Industry
                 </a>
@@ -71,19 +65,19 @@
         @if (isRecruiter)
         {
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Company" ? "bg-gray-200" : "")">
                     <i class="fa fa-building mr-2"></i>
                     Company
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
                     <i class="fa fa-suitcase mr-2"></i>
                     Jobs
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Application" ? "bg-gray-200" : "")">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Application" ? "bg-gray-200" : "")">
                     <i class="fa fa-check-circle-o mr-2"></i>
                     Applications
                 </a>
@@ -95,20 +89,20 @@
         @if (isRecruiter)
         {
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center px-2 py-1 rounded hover:bg-gray-200">
+                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200">
                     <i class="fa fa-cog mr-2"></i> Settings
                 </a>
             </li>
         }
         <li class="py-2">
-            <a href="#" data-toggle="modal" data-target="#logoutModal" class="flex items-center px-2 py-1 rounded hover:bg-gray-200">
+            <a href="#" data-toggle="modal" data-target="#logoutModal" class="flex items-center rounded px-2 py-1 hover:bg-gray-200">
                 <i class="fa fa-sign-out mr-2"></i>
                 Log out
             </a>
         </li>
     </ul>
-    <div class="flex items-center p-4 bg-gray-100 rounded mt-4">
-        <i class="fa fa-user-circle text-4xl mr-3"></i>
+    <div class="mt-4 flex items-center rounded bg-gray-100 p-4">
+        <i class="fa fa-user-circle mr-3 text-4xl"></i>
         <div>
             <span>@HttpContextAccessor.HttpContext.User.Identity.Name</span>
             @if (isSuper)
